--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,11 @@ Flask-SocketIO==2.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+numpy==1.12.1
+pandas==0.20.1
+python-dateutil==2.6.0
 python-engineio==0.9.0
 python-socketio==1.1
+pytz==2017.2
 six==1.10.0
 Werkzeug==0.11.4
